Bug 157364 - text selection tools is not synchronous with Clipboard
Summary: text selection tools is not synchronous with Clipboard
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-02-07 21:46 UTC by Fredy
Modified: 2008-03-04 01:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fredy 2008-02-07 21:46:38 UTC
Version:           4.0.1 (using KDE 4.0.0)
Installed from:    Debian testing/unstable Packages
OS:                Linux

Please add synchronization with Clipboard then text select the "Text Selection tool" and double-click word selection.  It is necessary for me to simple use stardict/qstardict dictionary with pdf in foreign language.
Comment 1 Pino Toscano 2008-02-26 21:54:56 UTC
SVN commit 779710 by pino:

Do not copy to the selection the text when selecting "Copy text" in the RMB menu, but after releasing the LMB when "visually" selecting text.

BUG: 157364


 M  +22 -10    pageview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=779710
Comment 2 Pino Toscano 2008-03-04 01:02:11 UTC
SVN commit 781952 by pino:

Check the DRM limitations as well when copying the selection.

CCBUG: 157364


 M  +8 -5      pageview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=781952