Do not copy to the selection the text when selecting "Copy text" in the RMB menu, but after releasing the LMB when "visually" selecting text.

BUG: 157364

svn path=/trunk/KDE/kdegraphics/okular/; revision=779710